# ieee754-practice

./: CMakeLists.txt  README.md  dectoieee.cpp  dectoieee.h  dectoieee.ui  exercisegenerator.cpp  exercisegenerator.h  floatwidget.cpp  floatwidget.h  floatwidget.ui  mainwindow.cpp  mainwindow.ui
src/: RandomBits.h  bitband.cpp  bitband.h  debug.h  exercisegenerator.cpp  exercisegenerator.h  floatrepresentation.cpp  floatrepresentation.h  main.cpp  nibble.h  number.cpp  number.h  tools.h
src/gui/: bitbandwidget.cpp  bitbandwidget.h  bitbandwidget.ui  dectoieee.cpp  dectoieee.h  dectoieee.ui  floatconverterwidget.cpp  floatconverterwidget.h  floatconverterwidget.ui  ieeetodec.cpp  ieeetodec.h  ieeetodec.ui  intconverterwidget.cpp  intconverterwidget.h  intconverterwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
